--- a/ChurchResourceManagerWeb/Views/Tithing/_tithingActivityByMemberGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_tithingActivityByMemberGrid.cshtml
@@ -1,5 +1,5 @@
 ﻿    <div uib-accordion>
-        <div uib-accordion-group class="panel panel-primary text-center" heading="Member's Tithing Activity" is-open="true">
+        <div uib-accordion-group class="panel panel-primary text-center" heading="{{tbmg.panelSettings.panelHeading}}" is-open="tbmg.panelSettings.isOpen">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
