Now modal can talk to Tithing Controller.

--- a/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
@@ -25,7 +25,7 @@
                         Add Tithes
                     </div>
                     <div class="panel-body">
-                        <add-tithe on-save="tc.doSaveTithe(tithe)" update-todays-totals="tc.addToTotal(titheAmount, titheDate)" clear-tithing-activity="tc.clearActivity()" get-member-tithes="tc.getMemberTithes(memberId)"></add-tithe>
+                        <add-tithe on-save="tc.doSaveTithe(tithe)" update-todays-totals="tc.addToTotal(titheAmount, titheDate)" clear-tithing-activity="tc.clearActivity()" get-member-tithes="tc.getMemberTithes(memberId)" set-member-activity-panel-defaults="tc.setActivityByMemberPanelDefaults()"></add-tithe>
                     </div>
                 </div>
             </div>
