Now modal can update Today's Totals.

--- a/ChurchResourceManagerWeb/Views/Tithing/_editTitheModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_editTitheModal.cshtml
@@ -12,7 +12,7 @@
     </div>
     
     <div class="row">
-        <add-tithe action="Update" tithe="etc.Tithe" on-save="etc.updateTithe(etc.Tithe)"></add-tithe>
+        <add-tithe action="Update" tithe="etc.Tithe" on-save="etc.updateTithe(etc.Tithe)" update-todays-totals="etc.updateTotals(titheAmount, titheDate)"></add-tithe>
 
     </div>
 </div>
