Added Delete Functionality to member recent activity grid.

--- a/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <tithes-running-totals tithes-running-total="tc.tithesRunningTotal"></tithes-running-totals>
-            <tithing-activity-by-member-grid panel-settings="tc.activityByMemberPanelSettings" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)"></tithing-activity-by-member-grid>
+            <tithing-activity-by-member-grid panel-settings="tc.activityByMemberPanelSettings" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)" open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"></tithing-activity-by-member-grid>
         </div>
     </div>
 
