--- a/ChurchResourceManagerWeb/Views/Tithing/_deleteTithesModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_deleteTithesModal.cshtml
@@ -1,6 +1,6 @@
 ﻿<!--header-->
 <div class="modal-header">
-    <button type="button" class="close" ng-click="et.closeDeleteTitheModal()">&times;</button>
+    <button type="button" class="close" ng-click="dtc.closeDeleteTitheModal()">&times;</button>
     <h4>Delete Tithe</h4>
 </div>
 <!--Body-->
@@ -9,6 +9,6 @@
 </div>
 <!--Footer-->
 <div class="modal-footer">
-    <button class="btn btn-danger" type="submit" ng-click="et.deleteTithe(tc.grid)">Delete</button>
-    <button class="btn btn-info" type="button" ng-click="et.closeDeleteTitheModal()">Cancel</button>
+    <button class="btn btn-danger" type="submit" ng-click="dtc.deleteTithe()">Delete</button>
+    <button class="btn btn-info" type="button" ng-click="dtc.closeDeleteTitheModal()">Cancel</button>
 </div>
