--- a/ChurchResourceManagerWeb/Views/Tithing/_tithingActivityByMemberGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_tithingActivityByMemberGrid.cshtml
@@ -18,7 +18,7 @@
                             <td>
                                 <span ng-click="tbmg.editTithe(memberTithe, $index, 1)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 |
-                                <span ng-click="tbmg.openDeleteTithesModal(memberTithe.TitheId)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-remove clickable"></span>
+                                <span ng-click="tbmg.deleteTithe(memberTithe.TitheId, memberTithe.MemberId)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-remove clickable"></span>
                             </td>
                         </tr>
                     </tbody>
