Added Notification Framework

--- a/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <span ng-message="required">This is required!</span>
         <div ng-message="maxlength">Message must not exceed 100 characters</div>
     </script>
-    
+
 
     <style>
         body {
@@ -59,6 +59,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/ChurchResourceManagerApp")
+    @Scripts.Render("~/bundles/notifications")
     @RenderSection("scripts", required: false)
 </body>
 </html>
