--- a/ChurchResourceManagerWeb/Views/Test/SpecRunner.cshtml
+++ b/ChurchResourceManagerWeb/Views/Test/SpecRunner.cshtml
@@ -14,6 +14,7 @@
 
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/ClientSideUnitTesting")
+    @Scripts.Render("~/bundles/notifications")
 
 
     <!-- include source files here... -->
