Added Panel Setttings to Tithing Activity

--- a/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
@@ -22,7 +22,7 @@
 
     <!--Tithing Activity-->
     <div style="padding-top: 10px;">
-        <tithing-activity tithing-activity="tc.todaysTithingActivity" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)" open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"></tithing-activity>
+        <tithing-activity panel-settings="tc.tithingActivityPanelSettings" tithing-activity="tc.todaysTithingActivity" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)" open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"></tithing-activity>
     </div>
 
 </div>
