--- a/ChurchResourceManagerWeb/Views/Tithing/_tithingActivity.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_tithingActivity.cshtml
@@ -2,7 +2,7 @@
 
 <div class="col-xs-12">
     <div uib-accordion>
-        <div uib-accordion-group class="panel panel-primary text-center" heading="Today's Tithing Activity" is-open="true">
+        <div uib-accordion-group class="panel panel-primary text-center" heading="{{tac.panelSettings.panelHeading}}" is-open="tac.panelSettings.isOpen">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
