Added a default panel heading size

--- a/ChurchResourceManagerWeb/Content/Site.css
+++ b/ChurchResourceManagerWeb/Content/Site.css
@@ -42,24 +42,6 @@ textarea {
     width: 268px;
 }
 
-/*.grid-scrollable {
-    max-height: 380px;
-    overflow-y: auto;
-    width: 100%;
-}*/
-
-/*.table-fixed thead {
-    width: 97%;
+.panel-heading {
+    font-size: 16px;
 }
-.table-fixed tbody {
-    height: 230px;
-    overflow-y: auto;
-    width: 100%;
-}
-.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
-    display: block;
-}
-.table-fixed tbody td, .table-fixed thead > tr> th {
-    float: left;
-    border-bottom-width: 0;
-}*/
