--- a/ChurchResourceManagerWeb/Views/Tithing/_tithesRunningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_tithesRunningTotals.cshtml
@@ -3,7 +3,7 @@
     <div class="panel panel-primary">
         <div class="panel-heading text-center">
             Today's Total
-            <span class="glyphicon glyphicon-refresh clickable pull-right" ng-click="tc.getTithesRunningTotal()"></span>
+            @*<span class="glyphicon glyphicon-refresh clickable pull-right" ng-click="tc.getTithesRunningTotal()"></span>*@
         </div>
         <div class="panel-body">
             @*// TODO: I need to look into how to make this thing shrink somehow based on the content*@
