Changed ViewTithes to use component

--- a/ChurchResourceManagerWeb/Views/Tithing/ViewTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/ViewTithes.cshtml
@@ -5,73 +5,6 @@
 
 <h2 style="padding-bottom: 40px;">View Tithes</h2>
 
-<div ng-controller="tithingActivityController as vt">
-    <div class="col-xs-12">
-        <div class="table-responsive">
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th width="10%">Member ID</th>
-                        <th>Name</th>
-                        <th>Amount</th>
-                        <th>Check Number</th>
-                        <th>Comments</th>
-                        <th width="6%"></th> <!--empty space for edit/delete-->
-                    </tr>
-                    <tr class="list-group" id="searchRow" name="searchRow">
-                        <td>
-                            <input type="text" id="txtMemberId" name="txtMemberId" class="form-control" ng-model="search.MemberId" />
-                        </td>
-                        <td>
-                            <input type="text" id="txtName" name="txtName" class="form-control" ng-model="search.MemberName" />
-                        </td>
-                        <td>
-                            <input type="text" id="txtAmount" name="txtAmount" class="form-control" ng-model="search.TitheAmountString" />
-                        </td>
-                        <td>
-                            <input type="text" id="txtCheckNumber" name="txtCheckNumber" class="form-control" ng-model="search.CheckNumber" />
-                        </td>
-                        <td>
-                            <input type="text" id="txtComments" name="txtComments" class="form-control" ng-model="search.Comments" />
-                        </td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="text-left" ng-repeat="tithe in vt.tithingActivity | filter: search">
-                        <td>{{tithe.MemberId}}</td>
-                        <td>{{tithe.MemberName}}</td>
-                        <td>{{tithe.TitheAmountString}}</td>
-                        <td>{{tithe.CheckNumber}}</td>
-                        <td>{{tithe.Comments}}</td>
-                        <td>
-                            <span ng-click="vt.editTithe(tithe, $index)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
-                            |
-                            <span ng-click="vt.openDeleteTitheModal(tithe.TitheId, $index)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-remove clickable"></span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="modal fade" id="editTitheModal" role="dialog">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div ng-controller="editTitheController as et">
-                    @Html.Partial("_editTitheModal")
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="deleteTithesModal" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div ng-controller="editTitheController as et">
-                    @Html.Partial("_deleteTithesModal")
-                </div>
-            </div>
-        </div>
-    </div>
-
+<div ng-controller="tithingController as tc">
+    <tithing-activity panel-settings="tc.tithingActivityPanelSettings" tithing-activity="tc.todaysTithingActivity" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)" open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"></tithing-activity>
 </div>
