--- a/ChurchResourceManagerWeb/Views/Tithing/ViewTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/ViewTithes.cshtml
@@ -6,5 +6,12 @@
 <h2 style="padding-bottom: 40px;">View Tithes</h2>
 
 <div ng-controller="tithingController as tc">
-    <tithing-activity panel-settings="tc.tithingActivityPanelSettings" tithing-activity="tc.todaysTithingActivity" open-edit-modal="tc.openEditTitheModal(tithe, index, grid)" open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"></tithing-activity>
+    <tithing-activity
+        get-tithing-activity="tc.getTithingActivity(tithingActivityType)"
+        tithing-activity-type="all"
+        panel-settings="tc.tithingActivityPanelSettings"
+        tithing-activity="tc.tithingActivity"
+        open-edit-modal="tc.openEditTitheModal(tithe, index, grid)"
+        open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)">
+    </tithing-activity>
 </div>
