Added Tithes Search

--- a/ChurchResourceManagerWeb/Views/Tithing/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/Home.cshtml
@@ -23,7 +23,7 @@
                     Something About Viewing Tithes
                 </p>
                 <p>
-                    <a class="btn btn-default" ng-href="/Tithing/ViewTithes">View Tithes &raquo;</a>
+                    <a class="btn btn-default" ng-href="/Tithing/TithesSearch">View Tithes &raquo;</a>
                 </p>
             </div>
         </div>
