Added new Pages

--- a/ChurchResourceManagerWeb/Views/Home/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Home/Index.cshtml
@@ -23,11 +23,12 @@
             </p>
         </div>
         <div class="col-md-4">
-            <h2>Tithing</h2>
+            <h2>Treasury</h2>
             <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
             <p>
                 @*<button class="btn btn-default">@Html.ActionLink("Go to Tithing", "Home", "Tithing") &raquo;</button>*@
-                <a class="btn btn-default" ng-href="/Tithing/Home">Go to Tithing &raquo;</a>
+                @*<a class="btn btn-default" ng-href="/Tithing/Home">Go to Tithing &raquo;</a>*@
+                <a class="btn btn-default" ng-href="/Treasury/Home">Go to Tithing &raquo;</a>
             </p>
         </div>
         <div class="col-md-4">
