--- a/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <script type='text/ng-template' id="message-template">
+    <script type="text/ng-template" id="message-template">
         <div ng-message="minlength">Message must be over 10 characters</div>
         <span ng-message="required">This is required!</span>
         <div ng-message="maxlength">Message must not exceed 100 characters</div>
