--- a/ChurchResourceManagerWeb/Content/Site.css
+++ b/ChurchResourceManagerWeb/Content/Site.css
@@ -45,3 +45,12 @@ textarea {
 .panel-heading {
     font-size: 16px;
 }
+
+/*Custom error validation*/
+div.crm-validation-error {
+    color: red;
+}
+
+.help-block-error {
+    color: red;
+}
