Added Main Offering Page Stuff

--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -8,7 +8,7 @@
         <div class="panel-body">
             @*// TODO: I need to look into how to make this thing shrink somehow based on the content*@
             <div class="text-success text-center">
-                <h3>{{trt.tithesRunningTotal.data | currency}}</h3>
+                <h3>{{rtc.runningTotal.data | currency}}</h3>
             </div>
         </div>
     </div>
