--- a/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
@@ -3,5 +3,33 @@
     ViewBag.Title = "Add Offerings";
 }
 
-<h2>@ViewBag.Title</h2>
 
+
+<div ng-controller="offeringController as oc">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-5">
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center">
+                        Add Offerings
+                    </div>
+                    <div class="panel-body">
+                        <add-offering on-save="oc.doSaveOffering(offering)"></add-offering>
+                    </div>
+                </div>
+            </div>
+            <running-totals running-total="oc.runningTotal"></running-totals>
+        </div>
+    </div>
+
+    <!--Offering Activity-->
+    <div style="padding-top: 10px;">
+        <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
+                           offering-activity-type="today"
+                           panel-settings="oc.offeringActivityPanelSettings"
+                           offering-activity="oc.offeringActivity"
+                           open-edit-modal="oc.openEditOfferingModal(offering, index)"
+                           open-delete-modal="oc.openDeleteOfferingModal(offeringId)"></offering-activity>
+    </div>
+
+</div>
