Added Running Total Shared logic

--- a/ChurchResourceManagerWeb/Views/Home/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <p>
                 @*<button class="btn btn-default">@Html.ActionLink("Go to Tithing", "Home", "Tithing") &raquo;</button>*@
                 @*<a class="btn btn-default" ng-href="/Tithing/Home">Go to Tithing &raquo;</a>*@
-                <a class="btn btn-default" ng-href="/Treasury/Home">Go to Tithing &raquo;</a>
+                <a class="btn btn-default" ng-href="/Treasury/Home">Go to Treasury &raquo;</a>
             </p>
         </div>
         <div class="col-md-4">
