--- a/ChurchResourceManagerWeb/Views/Treasury/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Treasury/Home.cshtml
@@ -7,22 +7,22 @@
 
 <div class="row">
     <div class="col-xs-4">
-        <h2>Tithing</h2>
+        <h2>Manage Tithes</h2>
         <p>
             Something About Tithing
         </p>
         <p>
-            <a class="btn btn-default" ng-href="/Tithing/Home">Add Tithes &raquo;</a>
+            <a class="btn btn-default" ng-href="/Tithing/Home">Go to Tithes &raquo;</a>
         </p>
     </div>
 
     <div class="col-xs-4">
-        <h2>Offerings</h2>
+        <h2>Manage Offerings</h2>
         <p>
             Something About Offerings
         </p>
         <p>
-            <a class="btn btn-default" ng-href="/Offerings/Home">View Tithes &raquo;</a>
+            <a class="btn btn-default" ng-href="/Offerings/Home">Go to Offerings &raquo;</a>
         </p>
     </div>
 </div>
