--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -1,4 +1,4 @@
-﻿<form id="addOfferingsForm" name="addOfferingsForm" novalidate ng-submit="aoc.addOffering(offering, addOfferingsForm)" autocomplete="off">
+﻿<form id="addOfferingsForm" name="addOfferingsForm" novalidate ng-submit="aoc.addOffering(aoc.Offering, addOfferingsForm)" autocomplete="off">
     <!--Date-->
     <div class="col-xs-10">
         <div class="form-group">
@@ -23,7 +23,7 @@
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon">$</span>
-                <input id="amountTxtBx" name="amountTxtBx" class="form-control" type="text" placeholder="Offering Amount (Ex. $0.00)" ng-model="oac.Offering.OfferingAmount" required />
+                <input id="amountTxtBx" name="amountTxtBx" class="form-control" type="text" placeholder="Offering Amount (Ex. $0.00)" ng-model="aoc.Offering.OfferingAmount" required />
             </div>
             <div class="help-block-error" ng-messages="addOfferingsForm.amountTxtBx.$error" ng-if="addOfferingsForm.amountTxtBx.$touched || addOfferingsForm.$submitted">
                 <div ng-messages-include="message-template"></div>
