--- a/ChurchResourceManagerWeb/Views/Home/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             </p>
             <p>
                 @*<button class="btn btn-default">@Html.ActionLink("Go to Membership", "Home", "Tithing") &raquo;</button>*@
-                <a class="btn btn-default" ng-href="/Tithing/Home">Go to Membership &raquo;</a>
+                <a class="btn btn-default" ng-href="/Membership/Home">Go to Membership &raquo;</a>
             </p>
         </div>
         <div class="col-md-4">
